Bug 631026 - do no implement nsHyperText for XUL documents, r=surkov, a=davidb